io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalaccesstononwhitelistedfield1/C.java
package io.hotmoka.examples.errors.illegalaccesstononwhitelistedfield1;

public class C {

	public Object foo() {
		return System.out;
	}
}